--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li>Comprendre</li>
                 <li>Garder une trace</li>
-                <li>Pour ne pas resté dans le silence</li>
+                <li>Ne pas resté dans le silence</li>
             </ul>
 
             <p>Ce cadeau est fait pour ça</p>
