--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=divice-width" />
-        <title>YouAndMe</title>
+        <title>You And Me</title>
         <link href="styles/style.css" rel="stylesheet" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,14 +20,14 @@
         <p>Il est necessaire d'écrire pour:</p>
 
             <ul>
-                <li>Comprendre</li>
-                <li>Garder une trace</li>
-                <li>Ne pas resté dans le silence</li>
+                <li><a href="page1.html">Comprendre</a></li>
+                <li><a href="page2.html">Garder une trace</a></li>
+                <li><a href="page3.html">Le futur</a></li>
             </ul>
 
             <p>Ce cadeau est fait pour ça</p>
 
-        <p>Pour s'ameliorer dans la pratique de l'ecriture allez voir <a href="https://www.projet-voltaire.fr/">le projet-voltaire</a></p>
+        <p>Pour s'ameliorer dans la pratique de l'ecriture allez voir<a href="https://www.projet-voltaire.fr/">le projet-voltaire</a></p>
 
     </body>
 </html>
