--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=divice-width" />
-        <title>Site de Stef</title>
+        <title>You And Me</title>
         <link href="style1.css" rel="stylesheet" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
