--- a/page1.html
+++ b/page1.html
@@ -15,7 +15,7 @@
     <body>
         <h1>COMPRENDRE</h1>
         <img src="images/psy.jpg" alt="Deux squelette tiennent une rose" />
-        <p align="center">Il est nécessaire de parler pour comprendre mais les mots se perdent si on ne les écrits pas.</p>
+        <p align="center">Il est necessaire de parler pour comprendre mais les mots se perdent si on ne les ecrits pas.</p>
         <h2><a href="index.html">YOU AND ME</a></h2>
      </body>
 </html>
