--- a/page3.html
+++ b/page3.html
@@ -23,7 +23,113 @@
         </div>
 
         <img src="images/prison.png" alt="Deux squelette tiennent une rose" />
+    
         <p align="center">Malgré l'enfermement physique se libérer de l'enfermement mental</p>
+
+
+<p align="center">
+JE VOUDRAIS PAS CREVER<br>
+
+Je voudrais pas crever <br />
+
+Avant d'avoir connu<br />
+
+Les chiens noirs du Mexique<br>
+
+Qui dorment sans rêver<br>
+
+Les singes à cul nu<br>
+
+Dévoreurs de tropiques<br>
+
+Je voudrais pas crever<br>
+
+Je voudrais pas crever<br>
+
+Sans savoir si le soleil est froid<br>
+
+Si les quatre saisons<br>
+
+Ne sont vraiment que quatre<br>
+
+Sans avoir regardé<br>
+
+Dans un regard d'égout<br>
+
+Je voudrais pas crever<br>
+
+Je voudrais pas crever<br>
+
+Sans avoir mis mon zobe<br>
+
+Dans des coins trop bizarres<br>
+
+Je voudrais pas finir<br>
+
+Sans connaître la lèpre<br>
+
+Ou les sept maladies<br>
+
+Je voudrais pas crever<br>
+
+Je voudrais pas crever<br>
+
+Avant d'avoir usé<br>
+
+Sa bouche avec ma bouche<br>
+
+Son corps avec mes mains<br>
+
+Le reste avec mes yeux<br>
+
+Je voudrais pas crever<br>
+
+Je voudrais pas crever<br>
+
+Sans qu'on ait inventé<br>
+
+Les roses éternelles<br>
+
+La journée de deux heures<br>
+
+La mer à la montagne<br>
+
+La montagne à la mer<br>
+
+Je voudrais pas crever<br>
+
+Je voudrais pas crever<br>
+
+Sans qu'on ait inventé<br>
+
+Les journaux en couleur<br>
+
+Tous les enfants contents<br>
+
+La fin de la douleur<br>
+
+Et tant de trucs encore<br>
+
+Je voudrais pas crever<br>
+
+Je voudrais pas crever<br> 
+
+Avant d'avoir tâté<br>
+
+Le goût qui me tourmente<br>
+
+Le goût qu'est le plus fort<br>
+
+Avant d'avoir goûté<br>
+
+La saveur de la mort...<br>
+
+Je voudrais pas crever <br>
+
+Je voudrais pas crever <br>
+
+</p>
+
         <h2><a href="index.html">YOU AND ME</a></h2>
      </body>
 </html>
