--- a/page1.html
+++ b/page1.html
@@ -14,8 +14,13 @@
     </head>
     <body>
         <h1>COMPRENDRE</h1>
-        <img src="images/psy.jpg" alt="Deux squelette tiennent une rose" />
-        <p align="center">Il est necessaire de parler pour comprendre mais les mots se perdent si on ne les ecrits pas.</p>
+        <img src="images/psychology.jpg" alt="Deux squelette tiennent une rose" />
+        <p align="center">
+            Il est necessaire de parler pour comprendre<br>
+            Passer de l'ombre a la lumière<br>
+            De l'inadapté à l'adpté<br>
+            Mais les mots se perdent si on ne les ecrits pas.<br>
+        </p>
         <h2><a href="index.html">YOU AND ME</a></h2>
      </body>
 </html>
