--- a/page3.html
+++ b/page3.html
@@ -22,7 +22,7 @@
                                     
         </div>
 
-        <img src="images/prison.png" alt="Deux squelette tiennent une rose" />
+        <img src="images/prisonmentale.png" alt="Deux squelette tiennent une rose" />
     
         <p align="center">Malgré l'enfermement physique se libérer de l'enfermement mental</p>
 
