--- a/page1.html
+++ b/page1.html
@@ -18,7 +18,7 @@
         <p align="center">
             Il est necessaire de parler pour comprendre<br>
             Passer de l'ombre a la lumière<br>
-            De l'inadapté à l'adpté<br>
+            De l'inadapté à l'adapté<br>
             Mais les mots se perdent si on ne les ecrits pas.<br>
         </p>
         <h2><a href="index.html">YOU AND ME</a></h2>
