--- a/page2.html
+++ b/page2.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
     <head>
@@ -18,5 +17,8 @@
         <img src="images/plume.webp" alt="Deux squelette tiennent une rose" />
         <p align="center">Écrire  pour ne pas oublier, pour que la temporalité apparaisse et que les actes restent à jamais gravé dans la matière comme ils sont gravés dans les esprits et dans la chair.</p>
         <h2><a href="index.html">YOU AND ME</a></h2>
+        <div>
+        <div style="float: left;"><a href="page1.html"><span>Précédent</span></a></div> <div style="float: right;"><a href="page3.html"><span>Suivant</span></a> </div>
+        </div>
      </body>
 </html>
