--- a/page1.html
+++ b/page1.html
@@ -17,10 +17,13 @@
         <img src="images/psychology.jpg" alt="Deux squelette tiennent une rose" />
         <p align="center">
             Il est necessaire de parler pour comprendre<br>
-            Passer de l'ombre a la lumière<br>
+            Passer de l'ombre à la lumière<br>
             De l'inadapté à l'adapté<br>
             Mais les mots se perdent si on ne les ecrits pas.<br>
-        </p>
         <h2><a href="index.html">YOU AND ME</a></h2>
+        <div>
+        <div style="float: left;"><a href="index.html"><span>Précédent</span></a></div>     
+        <div style="float: right;"><a href="page2.html"><span>Suivant</span></a> </div>
+        </div>
      </body>
 </html>
