--- a/page3.html
+++ b/page3.html
@@ -131,6 +131,8 @@ Je voudrais pas crever <br>
 </p>
 
         <h2><a href="index.html">YOU AND ME</a></h2>
+        <div>
+        <div style="float: left;"><a href="page2.html"><span>Précédent</span></a></div></div>
      </body>
 </html>
 
