--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <p>Il est necessaire d'écrire pour:</p>
 
             <ul>
-                <li><a href="page1.html">Comprendre</a></li>
-                <li><a href="page2.html">Garder une trace</a></li>
-                <li><a href="page3.html">Le futur</a></li>
+                <li><a href="pages/page1.html">Comprendre</a></li>
+                <li><a href="pages/page2.html">Garder une trace</a></li>
+                <li><a href="pages/page3.html">Le futur</a></li>
             </ul>
 
             <p>Ce cadeau est fait pour ça</p>
