--- a/pages/page3.html
+++ b/pages/page3.html
@@ -25,8 +25,7 @@
         <img src="../images/prisonmentale.png" alt="Deux squelette tiennent une rose" />
     
         <p align="center">Malgré l'enfermement physique se libérer de l'enfermement mental</p>
-
-
+        <H2>LA TENDRESSE</H2>
 <p align="center">
 
 On peut vivre sans richesse<br>
@@ -97,7 +96,7 @@ Règne l’amour<br>
 
 </p>
 
-        <h2><a href="../index.html">YOU AND ME</a></h2>
+        <h3><a href="../index.html">YOU AND ME</a></h3>
     <div>
         <div class="bouton" style="float: left;"><a href="page2.html"><span>Précédent</span></a></div>
     </div>
