--- a/pages/page1.html
+++ b/pages/page1.html
@@ -20,10 +20,16 @@
             Passer de l'ombre à la lumière<br>
             De l'inadapté à l'adapté<br>
             Mais les mots se perdent si on ne les ecrits pas.<br>
+ 
+
         <h2><a href="../index.html">YOU AND ME</a></h2>
-        <div>
-        <div style="float: left;"><a href="../index.html"><span>Précédent</span></a></div>     
-        <div  style="float: right;" ><a href="page2.html"><span>Suivant</span></a> </div>
+
+    <div >
+        <div class= pct ><a href="../index.html"><span>Précédent</span></a></div>
         </div>
-     </body>
+    <div class="svt">         
+        <div><a href="page2.html"><span>Suivant</span></a> </div>
+    </div>
+    
+    </body>
 </html>
