--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
 
         <h1>YOU AND ME</h1>
-        <img src="images/YouAndMe.png" alt="Deux squelette tiennent une rose" />
+        <img src="images/YouAndMe.png" title="click" alt="Deux squelette tiennent une rose" />
         <h2>WE GOT THIS</h2>
         <p>Il est necessaire d'écrire pour:</p>
 
