--- a/pages/page1.html
+++ b/pages/page1.html
@@ -22,7 +22,7 @@
             Mais les mots se perdent si on ne les ecrits pas.<br>
  
 
-        <h2><a href="../index.html">YOU AND ME</a></h2>
+        <h2><a href="../index.html" title="acceuil">YOU AND ME</a></h2>
 
     <div >
         <div class= pct ><a href="../index.html"><span>Précédent</span></a></div>
