--- a/pages/page2.html
+++ b/pages/page2.html
@@ -16,7 +16,7 @@
         <h1>GARDER UNE TRACE</h1>
         <img src="../images/plume.webp" alt="Deux squelette tiennent une rose" />
         <p align="center">Écrire  pour ne pas oublier, pour que la temporalité apparaisse et que les actes restent à jamais gravé dans la matière comme ils sont gravés dans les esprits et dans la chair.</p>
-        <h2><a href="../index.html">YOU AND ME</a></h2>
+        <h2><a href="../index.html" title="Acceuil">YOU AND ME</a></h2>
 
         <div  class="pct">
             <div><a href="page1.html"><span>Précédent</span></a></div>
