--- a/pages/page3.html
+++ b/pages/page3.html
@@ -101,7 +101,7 @@ Règne l’amour<br>
 
 </p>
 
-        <h3><a href="../index.html">YOU AND ME</a></h3>
+        <h3><a href="../index.html" title="Acceuil">YOU AND ME</a></h3>
     
         <div  class="pct">
             <div><a href="page1.html"><span>Précédent</span></a></div>
