--- a/pages/page1.html
+++ b/pages/page1.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=divice-width" />
         <title>You And Me</title>
+        <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
         <link href="../styles/style1.css" rel="stylesheet" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,11 +25,13 @@
 
         <h2><a href="../index.html" title="acceuil">YOU AND ME</a></h2>
 
-    <div >
-        <div class= pct ><a href="../index.html"><span>Précédent</span></a></div>
+    <div>
+        <div class="pct">
+            <div ><a href="../index.html"><span>Précédent</span></a></div> 
         </div>
-    <div class="svt">         
-        <div><a href="page2.html"><span>Suivant</span></a> </div>
+        <div class="svt">
+            <div><a href="page2.html"><span>Suivant</span></a> </div>
+        </div>
     </div>
     
     </body>
