--- a/pages/page2.html
+++ b/pages/page2.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=divice-width" />
         <title>You And Me</title>
+        <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
         <link href="../styles/style1.css" rel="stylesheet" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +21,7 @@
 
         <div  class="pct">
             <div><a href="page1.html"><span>Précédent</span></a></div>
-         </div>
+        </div>
         <div class="svt">         
                 <div><a href="page3.html"><span>Suivant</span></a> </div>
         </div>
