--- a/pages/page1.html
+++ b/pages/page1.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=divice-width" />
-        <title>You And Me</title>
-        <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-        <link href="../styles/style1.css" rel="stylesheet" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Single:wght@100..900&family=Fjalla+One&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Single:wght@100..900&family=Dancing+Script:wght@400..700&family=Fjalla+One&display=swap" rel="stylesheet">  
-    </head>
-    <body>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=divice-width" />
+    <title>You And Me</title>
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+    <link href="../styles/style1.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Single:wght@100..900&family=Fjalla+One&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Single:wght@100..900&family=Dancing+Script:wght@400..700&family=Fjalla+One&display=swap"
+        rel="stylesheet">
+</head>
+
+<body>
+    <main>
+
         <h1>COMPRENDRE</h1>
         <img src="../images/psychology.jpg" alt="Deux squelette tiennent une rose" />
         <p align="center">
@@ -21,18 +29,20 @@
             Passer de l'ombre à la lumière<br>
             De l'inadapté à l'adapté<br>
             Mais les mots se perdent si on ne les ecrits pas.<br>
- 
+
 
         <h2><a href="../index.html" title="acceuil">YOU AND ME</a></h2>
 
-    <div>
-        <div class="pct">
-            <div ><a href="../index.html"><span>Précédent</span></a></div> 
+        <div class="bouton">
+            <div class="pct">
+                <div><a href="../index.html"><span>Précédent</span></a></div>
+            </div>
+            <div class="svt">
+                <div><a href="page2.html"><span>Suivant</span></a> </div>
+            </div>
         </div>
-        <div class="svt">
-            <div><a href="page2.html"><span>Suivant</span></a> </div>
-        </div>
-    </div>
-    
-    </body>
+    </main>
+
+</body>
+
 </html>
