--- a/pages/page1.html
+++ b/pages/page1.html
@@ -30,8 +30,10 @@
             De l'inadapté à l'adapté<br>
             Mais les mots se perdent si on ne les ecrits pas.<br>
 
+        <div class="acceuil">
+            <h2><a href="../index.html" title="acceuil">YOU AND ME</a></h2>
+        </div>
 
-        <h2><a href="../index.html" title="acceuil">YOU AND ME</a></h2>
 
         <div class="bouton">
             <div class="pct">
